--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: ainformatico.github.com/jsjsjs
+url: http://ainformatico.github.com/jsjsjs
 title: jsjsjs
 subtitle: a javascript WTFs compilation
 author: Alejandro El Informático
@@ -26,7 +26,7 @@ email:
 # ----------------------- #
 
 # If publishing to a subdirectory as in http://site.com/project set 'root: /project'
-root: /
+root: /jsjsjs
 permalink: /blog/:year/:month/:day/:title/
 source: source
 destination: public
